@@ -4,7 +4,7 @@
 foo:
 	.block
 bar:
-	.block 0x7fffffff
+	.block 0x3fffffff
 com:
 
 
